[gd_scene load_steps=9 format=3 uid="uid://6kekdibiqokj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_wv1iv"]
[ext_resource type="FontFile" uid="uid://b22v1pq57ce2j" path="res://assets/fonts/Poppins-SemiBold.ttf" id="2_gsjfv"]
[ext_resource type="Script" path="res://scripts/CalcButton.gd" id="2_ynrdx"]
[ext_resource type="Theme" uid="uid://dvippca1wy448" path="res://assets/main_theme.tres" id="3_a26p3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xewhi"]
bg_color = Color(0.231373, 0.231373, 0.231373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onqlg"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dwucb"]
bg_color = Color(0.203922, 0.203922, 0.203922, 0.792157)
corner_radius_top_left = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnmgt"]
bg_color = Color(0.203922, 0.203922, 0.203922, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wv1iv")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 607.0
offset_bottom = 351.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xewhi")

[node name="DisplayBG" type="Panel" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 19.0
offset_right = 385.0
offset_bottom = 76.0
theme_override_styles/panel = SubResource("StyleBoxFlat_onqlg")

[node name="Display" type="Label" parent="DisplayBG"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -363.0
offset_top = -23.5
offset_right = -13.0
offset_bottom = 29.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_gsjfv")
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 2
clip_text = true

[node name="ButtonLayout" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 92.0
offset_right = 384.0
offset_bottom = 333.0
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 4

[node name="CalcButton" type="Button" parent="ButtonLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("3_a26p3")
text = "0"
script = ExtResource("2_ynrdx")

[node name="History" type="Panel" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 19.0
offset_right = 590.0
offset_bottom = 336.0
theme_override_styles/panel = SubResource("StyleBoxFlat_onqlg")

[node name="ScrollContainer" type="ScrollContainer" parent="History"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 179.0
offset_bottom = 306.0

[node name="VBoxContainer" type="VBoxContainer" parent="History/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Equasion" type="Label" parent="History/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gsjfv")
text = "kkyk"
clip_text = true

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
offset_left = 386.0
offset_top = -1.0
offset_right = 607.0
offset_bottom = 351.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dwucb")

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_top = 11.0
offset_right = 33.5
offset_bottom = 37.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_gsjfv")
text = "Settings"

[node name="OK" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 29.0
offset_top = 306.0
offset_right = 103.0
offset_bottom = 337.0
focus_mode = 0
theme = ExtResource("3_a26p3")
text = "OK"

[node name="Background" type="Control" parent="Settings"]
anchors_preset = 0
offset_left = 22.0
offset_top = 78.0
offset_right = 215.0
offset_bottom = 179.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="Settings/Background"]
layout_mode = 0
offset_left = 95.0
offset_top = 1.0
offset_right = 171.0
offset_bottom = 34.0
focus_mode = 0
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="Label" type="Label" parent="Settings/Background/ColorPickerButton"]
layout_mode = 0
offset_left = -96.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("2_gsjfv")
text = "Plain Color"

[node name="ChooseImage" type="Button" parent="Settings/Background"]
layout_mode = 0
offset_left = 84.0
offset_top = 49.0
offset_right = 172.0
offset_bottom = 83.0
focus_mode = 0
theme = ExtResource("3_a26p3")
disabled = true
text = "Choose"

[node name="Label" type="Label" parent="Settings/Background/ChooseImage"]
layout_mode = 0
offset_left = -62.0
offset_top = 4.0
offset_right = -9.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("2_gsjfv")
text = "Image"

[node name="Label" type="Label" parent="Settings/Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -128.0
offset_right = 1.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_gsjfv")
text = "Background------------"

[node name="user" type="Button" parent="Settings/Background"]
layout_mode = 0
offset_left = 84.0
offset_top = 88.0
offset_right = 172.0
offset_bottom = 122.0
focus_mode = 0
theme = ExtResource("3_a26p3")
text = "user://"

[node name="UseImage" type="CheckButton" parent="Settings/Background"]
layout_mode = 0
offset_left = 22.0
offset_top = 129.0
offset_right = 177.0
offset_bottom = 160.0
focus_mode = 0
text = "Use Image BG"

[node name="OK2" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 119.0
offset_top = 306.0
offset_right = 193.0
offset_bottom = 337.0
focus_mode = 0
theme = ExtResource("3_a26p3")
text = "Reset"

[node name="Toolbar" type="Panel" parent="."]
layout_mode = 0
offset_top = 351.0
offset_right = 607.0
offset_bottom = 408.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rnmgt")

[node name="Settings" type="Button" parent="Toolbar"]
layout_mode = 0
offset_left = 16.0
offset_top = 13.0
offset_right = 124.0
offset_bottom = 44.0
focus_mode = 0
theme = ExtResource("3_a26p3")
text = "Settings"

[node name="Clear" type="Button" parent="Toolbar"]
layout_mode = 0
offset_left = 140.0
offset_top = 13.0
offset_right = 248.0
offset_bottom = 44.0
focus_mode = 0
theme = ExtResource("3_a26p3")
text = "Clear"

[node name="Label" type="Label" parent="Toolbar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -38.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_gsjfv")
theme_override_font_sizes/font_size = 13
text = "Pixel Calc V1.0"

[node name="Label2" type="Label" parent="Toolbar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -19.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_gsjfv")
theme_override_font_sizes/font_size = 13
text = "9-21-2023"
horizontal_alignment = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(957, 408)
extend_to_title = true
min_size = Vector2i(100, 70)
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "BG Images"

[connection signal="pressed" from="Settings/OK" to="." method="_on_ok_pressed"]
[connection signal="color_changed" from="Settings/Background/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="pressed" from="Settings/Background/ChooseImage" to="." method="_on_choose_image_pressed"]
[connection signal="pressed" from="Settings/Background/user" to="." method="_on_user_pressed"]
[connection signal="pressed" from="Settings/Background/UseImage" to="." method="_on_use_image_pressed"]
[connection signal="pressed" from="Toolbar/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Toolbar/Clear" to="." method="_on_clear_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
